# de_case_bees

./: .dockerignore  .gitignore  README.md  airflow.Dockerfile  docker-compose.yml  mkdocs.Dockerfile  mkdocs.yml  pyproject.toml  requirements.txt  streamlit.Dockerfile
docs/architecture/: architecture.drawio
docs/tabs_mkdocs/: airflow.md  api.md  arquitetura.md  clone.md  dags.md  estrutura.md  ferramentas.md  index.md  medallion.md  mkdocs.md  streamlit.md
src/backend/airflow/: airflow.Dockerfile  dags.py
src/backend/api/: breweries_api.py  model.plantuml
src/backend/api/config/: settings.py
src/backend/dags/: pipe_dags.py
src/backend/mini_io/: s3_manager.py
src/backend/pipeline/: bronze.py
src/backend/pipeline/1layer_bronze/: bronze.py
src/backend/pipeline/2layer_silver/: silver.ipynb
src/backend/pipeline/layer1_bronze/: bronze.py
src/backend/pipeline/layer2_silver/: silver.ipynb  silver.py
src/backend/pipeline/layer3_gold/: gold.py
src/backend/pipeline/layer_bronze_1/: bronze.py
src/backend/pipeline/layer_gold_3/: gold.ipynb
src/backend/pipeline/layer_silver_2/: silver.ipynb  tdd.py
src/backend/resources/: duckdb_manager.py  s3_manager.py
src/backend/utils/: functions.py  logger.py
src/frontend/: app.py
