[project]
name = "de-case-bees"
version = "0.1.0"
description = ""
authors = [
    {name = "imbrunoagc"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
