[project]
name = "de-case-bees"
version = "0.1.0"
description = ""
authors = [
    {name = "imbrunoagc",email = "brunoaugusto864@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.2"
dependencies = [
    "apache-airflow (>=3.0.3,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "unidecode (>=1.4.0,<2.0.0)",
    "boto3 (>=1.39.9,<2.0.0)",
    "pyspark[hadoop] (>=4.0.0,<5.0.0)",
    "duckdb (>=1.3.2,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "streamlit (>=1.47.0,<2.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.15,<10.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
